[package]
name = "rustman"
version = "0.3.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Cross platfrom package manager"
repository = "https://github.com/sigmaSd/rustman"
license = "MIT"

[dependencies]
http_req  = {version="^0.5", default-features = false, features = ["rust-tls"]}
dirs = "2.0.1"
termcolor = "1.0.5"
toml = "0.5.1"
unchained = "0.1.3"
json = "0.11.14"
serde = { version = "1.0", features = ["derive"] }
once_cell = "0.2.5"
