[package]
name = "rustman"
version = "0.4.2"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Cross platfrom package manager"
repository = "https://github.com/sigmaSd/rustman"
license = "MIT"

[dependencies]
dirs-next = "2.0.0"
futures = "0.3.7"
reqwest = {version = "0.10.8", default-features = false, features=["rustls-tls", "json"]}
serde = { version = "1.0.117", features = ["derive"] }
termcolor = "1.1.0"
tokio = {version="0.2.22", features= ["rt-threaded"]}
toml = "0.5.7"
