[package]
name = "rustman"
version = "0.6.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Cross platfrom package manager"
repository = "https://github.com/sigmaSd/rustman"
license = "MIT"

[dependencies]
dirs-next = "2.0.0"
futures = "0.3.15"
reqwest = { version = "0.11.3", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.126", features = ["derive"] }
termcolor = "1.1.2"
tokio = { version = "1.6.1", features = ["rt-multi-thread"] }
toml = "0.5.8"
